--- a/src/Components/Shipment/Shipment.css
+++ b/src/Components/Shipment/Shipment.css
@@ -1,3 +1,15 @@
-.checkout-item-button{
+.checkout-item-button {
     width: 70px;
+}
+
+.shipForm {
+    margin: 30px 100px;
+}
+
+.shipForm input {
+    display: block;
+    margin-top: 15px;
+    padding: 5px;
+    border: 1px solid grey;
+    border-radius: 5px;
 }
